Added Point Cloud normal and plane segmentation

--- a/pcl-algorithms/CMakeLists.txt
+++ b/pcl-algorithms/CMakeLists.txt
@@ -3,21 +3,18 @@ project(pcl-algorithms)
 
 find_package(catkin REQUIRED COMPONENTS pcl_msgs roscpp sensor_msgs std_msgs)
 
-find_package(PCL REQUIRED QUIET COMPONENTS common)
+find_package(PCL 1.10 REQUIRED)
 
-include_directories(${catkin_INCLUDE_DIRS} ${PCL_COMMON_INCLUDE_DIRS})
+include_directories(${PCL_INCLUDE_DIRS} ${catkin_INCLUDE_DIRS})
+link_directories(${PCL_LIBRARY_DIRS})
+add_definitions(${PCL_DEFINITIONS})
+
 
 catkin_package(
   INCLUDE_DIRS ${PCL_COMMON_INCLUDE_DIRS}
   CATKIN_DEPENDS pcl_msgs roscpp sensor_msgs std_msgs
 )
-find_package(VTK 7.1.1 REQUIRED COMPONENTS vtkCommonCore vtkCommonDataModel)
-add_executable(plane-segmentation scripts/plane-segmentation.cpp)
-target_link_libraries(plane-segmentation ${catkin_LIBRARIES})
-add_dependencies(plane-segmentation pcl-algorithms_generate_messages_cpp)
 
-# Add gtest based cpp test target
-if(CATKIN_ENABLE_TESTING)
-  catkin_add_gtest(${PROJECT_NAME}-test scripts/plane-segmentation.cpp)
-  target_link_libraries(${PROJECT_NAME}-test ${catkin_LIBRARIES})
-endif()
+add_executable(pcl_proc src/plane-segmentation.cpp)
+add_dependencies(pcl_proc ${catkin_EXPORTED_TARGETS})
+target_link_libraries(pcl_proc ${PCL_LIBRARIES} ${catkin_LIBRARIES})
