Corrected Pose and published in on RVIZ

--- a/pcl-algorithms/package.xml
+++ b/pcl-algorithms/package.xml
@@ -54,11 +54,14 @@
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>tf</build_depend>
   <exec_depend version_gte="1.7.0">pcl</exec_depend>
   <exec_depend>pcl_msgs</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>tf</exec_depend>
+  
 
 
   <!-- The export tag contains other, unspecified, tags -->
