--- a/pcl-algorithms/CMakeLists.txt
+++ b/pcl-algorithms/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(pcl-algorithms)
 
-find_package(catkin REQUIRED COMPONENTS pcl_msgs roscpp sensor_msgs std_msgs)
+find_package(catkin REQUIRED COMPONENTS pcl_msgs roscpp sensor_msgs std_msgs tf)
 
 find_package(PCL 1.10 REQUIRED)
 
@@ -12,7 +12,7 @@ add_definitions(${PCL_DEFINITIONS})
 
 catkin_package(
   INCLUDE_DIRS ${PCL_COMMON_INCLUDE_DIRS}
-  CATKIN_DEPENDS pcl_msgs roscpp sensor_msgs std_msgs
+  CATKIN_DEPENDS pcl_msgs roscpp sensor_msgs std_msgs tf
 )
 
 add_executable(pcl_proc src/plane-segmentation.cpp)
